--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,7 +1,7 @@
 .navbar {
   display: flex;
   position: sticky;
-  top: 0;
+  top: 16px;
   justify-content: space-between;
   font-family: 'Rubik', sans-serif;
   margin: 16px 40px 0;
