--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,11 +1,38 @@
 .navbar {
   display: flex;
   position: sticky;
-  top: 16px;
+  top: 0px;
   justify-content: space-between;
   font-family: 'Rubik', sans-serif;
-  margin: 16px 40px 0;
+  /*padding: 16px 40px 16px;*/
 }
+
+.navbar__list {
+  padding: 0;
+  margin: 16px 40px;
+  display: flex;
+  justify-content: space-between;
+  max-width: 415px;
+  list-style-type: none;
+  align-items: center;
+  width: 100%;
+}
+
+.navbar__logo {
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 32px;
+  letter-spacing: -0.005em;
+  text-align: center;
+  color: white;
+  margin: 22px auto 22px 40px;
+}
+
+.navbar_type_scrolled {
+  background: rgba(34, 34, 34, 0.7);
+  backdrop-filter: blur(10px);
+}  
 
 .navbar__link {
   font-size: 18px;
@@ -25,29 +52,9 @@
 }
 
 .navbar__button_type_scrolled {
-  background-color: transparent;
+  background-color: #fff;
   border: 1px solid rgb(255, 255, 255);
-  padding: 15px;
+  padding: 14px 24px;
   border-radius: 25px;
-}
-
-.navbar__list {
-  display: flex;
-  justify-content: space-between;
-  max-width: 415px;
-  list-style-type: none;
-  align-items: center;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-}
-
-.navbar__logo {
-  font-size: 28px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 32px;
-  letter-spacing: -0.005em;
-  text-align: center;
-  color: white;
+  color: #222;
 }
