--- a/src/components/Directions/Directions.css
+++ b/src/components/Directions/Directions.css
@@ -8,6 +8,19 @@
   max-width: 816px;
 }
 
+.directions__card {
+  border: 1px solid #1A1A1A;
+  padding: 56px 60px;
+  border-radius: 24px;
+  width: 240px;
+  height: 304px;
+  display: flex;
+  flex-direction: column;
+  background: #1A1A1A;
+  box-sizing: border-box;
+  align-items: center;
+}
+
 .directions__cards {
   list-style-type: none;
   padding: 0;
@@ -23,6 +36,7 @@
   line-height: 36px;
   letter-spacing: 0em;
   text-align: center;
+  margin: 24px 0 48px;
 }
 
 .directions__title {
@@ -30,6 +44,19 @@
   font-style: normal;
   font-weight: 500;
   line-height: 56px;
+  letter-spacing: 0em;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+.directions__description {
+  max-width: 122px;
+  margin: 24px 0 0;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
   letter-spacing: 0em;
   text-align: center;
 }
