--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
 .App {
   max-width: 1440px;
-  margin: 0 auto 0;
+  margin: 0 auto;
+  position: relative;
 }
 
 body {
-  /*background-color: rgb(41, 41, 41);*/
   background: #010101;
   margin: 0;
   padding: 0;
+  position: relative;
+  overflow-x: hidden;
 }
